highlighting issues in Dope Sheet #60821

Closed
opened 2019-01-24 16:16:33 +01:00 by Jack Schaberg · 9 comments

Operating system: Windows 10 Pro 10.0.16299 Build 16299
Graphics card: NVIDIA GeForce GTX 1070

Blender Version
Broken:
Date: 2019-01-23 00:32
Hash: dc3b5024be
Branch: blender2.7

Short description of error
selected objects not highlighting in Dope Sheet

Exact steps for others to reproduce the error

  1. select object in 3D view window (or in Dope Sheet)
  2. open Dope Sheet window
  3. Selected object is not highlighted as it was in 2.79; neither is the row, making it very difficult to know which keyframes go with which object

I've noticed this for a while; it seems like some times, the highlighting works, but more often than not, it doesn't.

See attached screenshot.Dope Sheet highlighting issue.jpg

I believe it's the same issue regardless of the .blend file, so I didn't attach this one, because it's rather large. But I can if needed.

Thanks.

Operating system: Windows 10 Pro 10.0.16299 Build 16299 Graphics card: NVIDIA GeForce GTX 1070 **Blender Version** Broken: Date: 2019-01-23 00:32 Hash: dc3b5024be1a Branch: blender2.7 **Short description of error** selected objects not highlighting in Dope Sheet **Exact steps for others to reproduce the error** 1. select object in 3D view window (or in Dope Sheet) 2. open Dope Sheet window 3. Selected object is not highlighted as it was in 2.79; neither is the row, making it very difficult to know which keyframes go with which object I've noticed this for a while; it seems like some times, the highlighting works, but more often than not, it doesn't. See attached screenshot.![Dope Sheet highlighting issue.jpg](https://archive.blender.org/developer/F6390458/Dope_Sheet_highlighting_issue.jpg) I believe it's the same issue regardless of the .blend file, so I didn't attach this one, because it's rather large. But I can if needed. Thanks.
Author

Added subscriber: @JaySchay

Added subscriber: @JaySchay
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-01-25 09:49:04 +01:00
Member

Confirmed, checking...

Confirmed, checking...
Author

Hi. Anything new to report on the issue of highlighting in the Dope Sheet?

Hi. Anything new to report on the issue of highlighting in the Dope Sheet?
Member

Will look into this again today.

I already did some digging some time ago and got it to work (sort of) by tagging ID_RECALC_TRANSFORM in a bunch of places, but that didnt seem like the right solution to me..
More in a bit...

Will look into this again today. I already did some digging some time ago and got it to work (sort of) by tagging `ID_RECALC_TRANSFORM` in a bunch of places, but that didnt seem like the right solution to me.. More in a bit...

This issue was referenced by 12417fcbf6

This issue was referenced by 12417fcbf676198726baac5e8fc883f64f188b55
Member

OK, so it seems for some reason the SELECT flag on the object and its base are not in sync.

Not being too familiar with this, I am unsure if this is supposed to be like this, or if we are in the middle of something being updated while Dopesheet is drawing...

Sooo, we have a couple of occasions where this SELECT flag is checked for (indirectly):

  • ANIM_channel_draw()
  • draw_channel_strips()
  • actkeys_channels_get_selected_extents()
  • nla_channels_get_selected_extents()
  • maybe more

and it does so via ANIM_channel_setting_get(ac, ale, ACHANNEL_SETTING_SELECT)
This in turn is done via the bAnimChannelType's setting_flag / setting_ptr.

I have traced the SELECT flag in acf_object_setting_ptr() and it is not the same for the base and the object there.
If I simply check against the ob->base_flag instead of ob->flag there everything seems to be fine and working (see D4606), base_flag seems to be up to date already...

[P.S.: only other way I found to get it to update is flagging ID_RECALC_TRANSFORM in numerous places where objects are selected, but this seems wrong -- as mentioned above...]

OK, so it seems for some reason the `SELECT` flag on the object and its base are not in sync. Not being too familiar with this, I am unsure if this is supposed to be like this, or if we are in the middle of something being updated while Dopesheet is drawing... Sooo, we have a couple of occasions where this `SELECT` flag is checked for (indirectly): - ANIM_channel_draw() - draw_channel_strips() - actkeys_channels_get_selected_extents() - nla_channels_get_selected_extents() - maybe more and it does so via `ANIM_channel_setting_get(ac, ale, ACHANNEL_SETTING_SELECT)` This in turn is done via the `bAnimChannelType`'s `setting_flag` / `setting_ptr`. I have traced the SELECT flag in `acf_object_setting_ptr()` and it is not the same for the base and the object there. If I simply check against the ob->base_flag instead of ob->flag there everything seems to be fine and working (see [D4606](https://archive.blender.org/developer/D4606)), base_flag seems to be up to date already... [P.S.: only other way I found to get it to update is flagging `ID_RECALC_TRANSFORM` in numerous places where objects are selected, but this seems wrong -- as mentioned above...]
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Just downloaded and opened the new build. You guys are the best!

Thanks.

Just downloaded and opened the new build. You guys are the best! Thanks.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60821
No description provided.